--- a/seekdeeplearning/package.json
+++ b/seekdeeplearning/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "mongoose": "^8.13.2",
     "next": "^15.3.0",
     "next-navigation": "^1.0.6",
     "react": "^19.1.0",
