--- a/seekdeeplearning/package.json
+++ b/seekdeeplearning/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "lucide-react": "^0.501.0",
     "mongoose": "^8.13.2",
     "next": "^15.3.1",
     "next-navigation": "^1.0.6",
